--- a/draft.html
+++ b/draft.html
@@ -48,6 +48,8 @@
 		.logo img {
 			padding-left: 1em;
 			height: 2em;
+			position: relative;
+			top: .75em;
 		}
 
 		img {
@@ -128,13 +130,34 @@
 		Intro
 		=====
 
+		--
+
 		* '06 Flash
+
+		--
+
 		* '07 Php (Html4 / Ajax / CSS )
+
+		--
+
 		* '11 Java (Spring &amp; Flex / JEE &amp; Primefaces)
+
+		--
+
 		* '12 Python
+
+		--
+
 		* '13 Javascript (Clientside templating / Sass / Less)
 
+		--
+
+
+		Currently working @ .logo.geniux[![Geniux](images/geniux.png)]
+
 		---
+
+
 
 		What is meteor?
 		===============
