--- a/draft.html
+++ b/draft.html
@@ -71,6 +71,7 @@
 
 		Matyas Albert Nagy
 
+		.logo.geniux[![Geniux](images/geniux.png)]
 
 
 		---
@@ -81,15 +82,15 @@
 
 		--
 
-		* It rings a bell
+		* It rings a bell. 15/150
 
 		--
 
-		* Gave it a try
+		* Gave it a try. 24/150
 
 		--
 
-		* Yeah! I'm doing it!
+		* Yeah! I'm doing it! 3/150
 
 
 
@@ -149,11 +150,6 @@
 		--
 
 		* '13 Javascript (Clientside templating / Sass / Less)
-
-		--
-
-
-		Currently working @ .logo.geniux[![Geniux](images/geniux.png)]
 
 		---
 
