--- a/draft.html
+++ b/draft.html
@@ -82,15 +82,15 @@
 
 		--
 
-		* It rings a bell. 15/150
+		* It rings a bell. /150
 
 		--
 
-		* Gave it a try. 24/150
+		* Gave it a try. /150
 
 		--
 
-		* Yeah! I'm doing it! 3/150
+		* Yeah! I'm doing it! /150
 
 
 
@@ -105,10 +105,6 @@
 		--
 
 		* What?
-
-		--
-
-		* Why?
 
 		--
 
@@ -180,7 +176,7 @@
 
 		--
 
-		= Aweseome platform to dev on
+		= Awesome platform to develop on
 		---------------------------
 
 		---
@@ -284,7 +280,7 @@
 
 		--
 
-		* **webstorm** by IDEA
+		* IDE: **webstorm** by IDEA / sublime / atom / vim / emacs / notepad ;)
 
 		--
 
@@ -296,7 +292,7 @@
 
 		--
 
-		* **velocity.meteor.com** - Jonas Aschenbrenner - Munich
+		* use **velocity.meteor.com** for testing (Jonas Aschenbrenner - Munich)
 
 		--
 
@@ -315,6 +311,15 @@
 		* Other sources [meteorpedia.com](meteorpedia.com) / [meteorhacks.com](meteorhacks.com) + weekly newsletter / [meteorpodcast.com](meteorpodcast.com) / [meteorpad.com](meteorpad.com)
 
 		---
+		class: middle center
+
+
+		We at .logo[![Geniux](images/geniux.png)] are hiring developers!
+
+		info@geniux.de
+
+		---
+
 		class: middle center
 
 		Q &amp; A
