added live coding example

--- a/draft.html
+++ b/draft.html
@@ -82,15 +82,15 @@
 
 		--
 
-		* It rings a bell. /150
+		* It rings a bell.
 
 		--
 
-		* Gave it a try. /150
+		* Gave it a try.
 
 		--
 
-		* Yeah! I'm doing it! /150
+		* Yeah! I'm doing it!
 
 
 
